<resources>
    <string name="app_name">uAppLock</string>
    <string name="accept">Accept</string>

    <string name="welcome_message">Welcome to uAppLock</string>

    <string name="set_pattern">Set a pattern</string>
    <string name="message_to_request_pattern">Please enter a pattern that you can remember easily</string>
    <string name="message_to_confirm_pattern">Please enter the pattern again</string>
    <string name="message_to_repeat_pattern">The pattern does not match, please try again</string>
    <string name="correct_configuration_message_for_pattern">The pattern has been configured correctly</string>
    <string name="reset_pattern">Reset Pattern</string>

    <string name="set_pin">Set a pin</string>
    <string name="message_to_request_pin">Please enter 4 digits that you can remember easily</string>
    <string name="message_to_confirm_pin">Please enter the pin again</string>
    <string name="message_to_repeat_pin">The pin does not match, please try again</string>
    <string name="correct_configuration_message_for_pin">The pin has been configured correctly</string>
    <string name="reset_pin">Reset Pin</string>

    <string name="message_fingerprint_sensor_detected">We have detected the fingerprint sensor on your device</string>
    <string name="add_fingerprint_message">Please add a fingerprint to activate this feature</string>
    <string name="enable_fingerprint_support">Enable Fingerprint</string>
    <string name="disable_fingerprint_support">Disable Fingerprint</string>
    <string name="fingerprint_message">Press button below to add a new fingerprint to enable this feature</string>

    <string name="grant_permission">Grant permission</string>

    <string name="usage_stats_permission">Allow the use of statistics</string>
    <string name="usage_stats_permission_description">Please enable the use of statistics for better application performance</string>
    <string name="overlay_permission">Overlay Permission</string>
    <string name="overlay_permission_description">It is necessary to display the lock screen</string>
    <string name="write_settings_permission">Write Settings Permission</string>
    <string name="write_settings_permission_description">It is necessary to setup cool features</string>

    <string name="title_activity_app_list">Application List</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search…</string>
    <string name="applications">Applications</string>
    <string name="locked_apps">Locked Apps</string>
    <string name="unlocked_apps">Unlocked Apps</string>

    <string name="long_click_message">What would you like to do?</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="cancel">Cancel</string>
    <string name="app_details">App Details</string>
    <string name="undo">Undo</string>
    <string name="uninstall_app_message">Preparing to uninstall app</string>
    <string name="uninstall_error_message">An error occurred while trying to uninstall the application</string>

    <string name="title_activity_settings">Settings</string>
    <string name="uapplock_settings">uAppLock Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="design_settings">Design Settings</string>
    <string name="info_settings">uAppLock Info</string>

    <string name="fingerprint_title">Fingerprint settings</string>
    <string name="fingerprint_summary">Enable / Disable unlock by fingerprint on uAppLock screen and configure other related settings</string>
    <string name="pattern_title">Pattern settings</string>
    <string name="pattern_summary_text">Changes the settings related to the pattern</string>
    <string name="pin_title">Pin settings</string>
    <string name="pin_summary_text">Changes the settings related to the pin</string>
    <string name="unlock_method_title">Unlock method</string>
    <string name="unlock_method_summary">Choose a default unlock method</string>
    <string name="unlock_method_chosen">Unlock method chosen: %s</string>
    <string name="block_apps_after_screen_off_summary">It helps you to not have unnecessary blocks</string>
    <string name="block_apps_after_screen_off_title">Block applications after the screen turns off</string>
    <string name="enable_swipe_on_lock_screen_summary">It allows you to change the method of unlocking directly on the lock screen</string>
    <string name="enable_swipe_on_lock_screen_title">Enable swipe on lock screen</string>
    <string name="notification_on_status_bar_summary">You can see information related to the application</string>
    <string name="notification_on_status_bar_title">Show notification on status bar</string>
    <string name="icon_on_app_drawer_title">Show icon in the application drawer</string>
    <string name="icon_on_app_drawer_summary">Remember!, If the icon is hidden, you must make a call to *#12345#*</string>
    <string name="profile_picture_title">Profile Picture</string>
    <string name="profile_picture_summary_text">Add a profile photo to header of navigation view</string>
    <string name="font_title">Font</string>
    <string name="font_summary_text">Change the font style of the application</string>
    <string name="set_a_wallpaper_title">Set a wallpaper</string>
    <string name="set_a_wallpaper_summary_text">Add / Change the wallpaper header navigation view and also the lock screen</string>
    <string name="mail_developer">alberto9.24.93@gmail.com</string>
    <string name="contact_me">Contact me</string>
    <string name="open_source_lic_summary">Tools used for application development</string>
    <string name="open_source_lic_title">Open source licenses</string>
    <string name="send_bug_report_summary">Tell us about any errors</string>
    <string name="send_bug_report_title">Send bug report</string>
    <string name="check_for_update_summary">v1.0</string>
    <string name="check_for_update_title">Current version</string>

    <string name="title_activity_fingerprint_settings">Fingerprint Settings</string>
    <string name="enable_fingerprint_title">Enable Fingerprint</string>
    <string name="enable_fingerprint_summary">Enable / Disable unlock by fingerprint on uAppLock screen</string>
    <string name="security_settings_title">Security Settings</string>
    <string name="security_settings_summary">Open the security settings to configure aspects related to fingerprints, such as, add new fingerprint or delete one, among other things</string>

    <string name="title_activity_pattern_settings">Pattern Settings</string>
    <string name="stealth_mode">Stealth mode</string>
    <string name="stealth_mode_disabled">Stealth mode disabled</string>
    <string name="stealth_mode_enabled">Stealth mode enabled</string>

    <string name="title_activity_pin_settings">Pin Settings</string>

    <string name="title_activity_font_settings">Font Settings</string>

    <string name="title_activity_profile_picture_settings">Profile Picture Settings</string>

    <string name="title_activity_wallpaper_settings">Wallpaper Settings</string>
    <string name="camera">Camera</string>
    <string name="close">Close</string>
    <string name="gallery">Gallery</string>
    <string name="select_source">Select source</string>
    <string name="done">Done</string>
    <string name="document">Document</string>
    <string name="color">Solid Color</string>
    <string name="set_to_default">Default</string>
    <string name="add">Add</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="blur">Blur</string>

    <string name="title_activity_licenses">Licenses</string>

    <string name="support_email">uappssystemservice@gmail.com</string>
    <string name="bug_report_subject">Bug report on %1$s v%2$s</string>

    <string name="title_notification">uBlock is running correctly.</string>
    <string name="text_notification">Tap here for more info.</string>

    <string name="accessibility_service">Enable Accessibility Services</string>
    <string name="accessibility_service_description">Enable to protect Facebook Messenger\'s privacy and other apps like that</string>
    <string name="accessibility_service_activation_description">Enable to protect Facebook Messenger\'s privacy and other apps like that, you may receive privacy warnings, this is a standard procedure on all Android OS when enabling Accessibility Services. (uAppLock will NOT collect any personal data)</string>
    <string name="use_your_fingerprint_to_unlock">Use your fingerprint to unlock</string>
    <string name="add_fingerprint">Add Fingerprint</string>
</resources>
