<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_menu_apps"
            android:title="@string/applications" />
        <item
            android:id="@+id/nav_locked_apps"
            android:icon="@drawable/ic_menu_locked_apps"
            android:title="@string/locked_apps" />
        <item
            android:id="@+id/nav_unlocked_apps"
            android:icon="@drawable/ic_menu_unlocked_apps"
            android:title="@string/unlocked_apps" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_menu_about_me"
                android:title="@string/action_about_me" />-->
        </menu>
    </item>

</menu>
