<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arrg.app.uapplock.view.activity.ProfilePictureSettingsActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cropAspectRatioX="9"
        app:cropAspectRatioY="16"
        app:cropAutoZoomEnabled="true"
        app:cropBackgroundColor="@color/glass50"
        app:cropBorderCornerColor="@color/colorPrimary"
        app:cropBorderCornerThickness="1dp"
        app:cropBorderLineColor="@color/colorPrimary"
        app:cropBorderLineThickness="1dp"
        app:cropFixAspectRatio="true"
        app:cropGuidelines="onTouch"
        app:cropGuidelinesColor="@color/colorPrimary"
        app:cropGuidelinesThickness="0.5dp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/wallpaperPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal"
        android:background="@color/glass50"
        android:scaleType="centerCrop"
        android:visibility="invisible" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        app:blurOverlayColor="@color/white_glass10">

        <LinearLayout
            android:id="@+id/buttonBarContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/add"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_add_white" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnBlur"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/blur"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_blur_white" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnRotate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/rotate"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_rotate_white" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnCrop"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/crop"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_crop_white" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnUndo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/undo"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_undo_white" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btnDone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:contentDescription="@string/done"
                android:gravity="center"
                android:src="@drawable/ic_button_bar_done_white" />
        </LinearLayout>
    </eightbitlab.com.blurview.BlurView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurSeekBarView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        app:blurOverlayColor="@color/white_glass10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:max="25" />
        </LinearLayout>
    </eightbitlab.com.blurview.BlurView>
</FrameLayout>
