<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arrg.app.uapplock.view.activity.PatternSettingsActivity"
    tools:showIn="@layout/activity_pattern_settings">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/text_padding_unlock_method_request"
        android:text="@string/message_to_request_pattern"
        android:textColor="@color/wet_asphalt75"
        android:textSize="@dimen/text_size_unlock_method_request" />

    <com.arrg.app.uapplock.view.ui.MaterialLockView
        android:id="@+id/materialLockView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:correct_color="@color/material_teal_500"
        app:lock_color="@color/colorAccent"
        app:wrong_color="@color/material_red_500" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="1dp"
        android:background="@color/wet_asphalt10" />

    <LinearLayout
        android:id="@+id/buttonBarContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnResetPattern"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bar_background"
            android:text="@string/reset_pattern"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSetPattern"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bar_background"
            android:enabled="false"
            android:text="@string/accept"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>
