<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.SplashScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size_splash_screen"
            android:layout_height="@dimen/icon_size_splash_screen"
            android:layout_centerInParent="true"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvWelcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:shadowColor="@color/wet_asphalt25"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/app_name"
            android:textColor="@color/wet_asphalt75"
            android:textSize="@dimen/text_size_splash_screen" />

        <LinearLayout
            android:id="@+id/buttonBarContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSetPattern"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_bar_background"
                android:text="@string/set_pattern"
                android:textColor="@color/wet_asphalt75"
                android:visibility="invisible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSetPin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_bar_background"
                android:text="@string/set_pin"
                android:textColor="@color/wet_asphalt75"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:visibility="invisible"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/buttonBarContainer"
            android:background="@color/wet_asphalt10"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp" />
    </RelativeLayout>
</LinearLayout>
