<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arrg.app.uapplock.view.activity.PinSettingsActivity"
    tools:showIn="@layout/activity_pin_settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.andrognito.pinlockview.PinLockView
            android:id="@+id/pinLockView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:keypadButtonBackgroundDrawable="@drawable/dot_empty_background"
            app:keypadButtonSize="75dp"
            app:keypadDeleteButtonDrawable="@drawable/ic_backspace_wet_asphalt_24dp"
            app:keypadDeleteButtonPressedColor="@color/wet_asphalt75"
            app:keypadDeleteButtonSize="25dp"
            app:keypadHorizontalSpacing="50dp"
            app:keypadShowDeleteButton="true"
            app:keypadTextColor="@color/wet_asphalt75"
            app:keypadTextSize="25sp"
            app:keypadVerticalSpacing="10dp"
            app:pinLength="4" />

        <com.andrognito.pinlockview.IndicatorDots
            android:id="@+id/indicatorDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/pinLockView"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:gravity="center"
            app:dotDiameter="20dp"
            app:dotEmptyBackground="@drawable/dot_empty_background"
            app:dotFilledBackground="@drawable/dot_filled_background"
            app:dotSpacing="20dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/indicatorDots"
            android:gravity="center"
            android:padding="@dimen/text_padding_unlock_method_request"
            android:text="@string/message_to_request_pin"
            android:textColor="@color/wet_asphalt75"
            android:textSize="@dimen/text_size_unlock_method_request" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="1dp"
        android:background="@color/wet_asphalt10" />

    <LinearLayout
        android:id="@+id/buttonBarContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnResetPin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bar_background"
            android:text="@string/reset_pin"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSetPin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bar_background"
            android:enabled="false"
            android:text="@string/accept"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>
